package news;

public interface Observer {
    void update(News news);
}
