package news;
public class PoliticsNews extends News {
    public PoliticsNews(String title, String content) { super(title, content); }
}
