package news;
public class SportsNews extends News {
    public SportsNews(String title, String content) { super(title, content); }
}
