package news;
public class TechNews extends News {
    public TechNews(String title, String content) { super(title, content); }
}
